# 3-python-package-cs467

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: build.yaml
src/DemoPackage/: __main__.py  daily_planner.py  example.py  furtune_cookie.py  generate_emoji.py  owl_banner.py  password_strength.py
tests/: test.py  test_.py  test_fortune_cookie.py
