[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demopackage-cs467"
description = "A fun Python package that brings joy to developers with random fortunes and emojis."
version = "0.1.1"
authors = [
  { name="Polaris Wu", email="sw5693@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2025/3-python-package-cs467"
"Repository" = "https://github.com/software-students-spring2025/3-python-package-cs467.git"
"Bug Tracker" = "https://github.com/software-students-spring2025/3-python-package-cs467/issues"

[project.scripts]
demopackage-cs467 = "DemoPackage.__main__:main"